mobile device fix

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,6 +3,7 @@ body,html{
     padding:0;
     background-color: var(--color-1);
     overflow-x:hidden;
+    overscroll-behavior-y: contain;
 
 }
 
